@@ -1,3 +1,7 @@
+Fri Jan 28 15:53:53 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Added introspection methods to OMQuery.
+
 Fri Jan 28 13:41:20 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Started Changelog
